plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
	id "com.github.spotbugs" version "6.0.19"
}

group = 'com.GASB'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.modelmapper:modelmapper:3.0.0'

	// RabbitMQ
	implementation 'org.springframework.boot:spring-boot-starter-amqp'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or 'io.jsonwebtoken:jjwt-gson:0.11.5' for Gson

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 파일네임 비교를 위해서
	implementation 'org.apache.commons:commons-text:1.10.0' // Use the latest version available
	implementation 'commons-io:commons-io:2.11.0' 			// 확장자 분리용

	// 문서 유사도 비교
	// Apache POI for reading Excel files
	// Apache POI for reading Excel files
	implementation 'org.apache.poi:poi:4.1.2'
	implementation 'org.apache.poi:poi-ooxml:4.1.2'
	implementation 'org.apache.poi:poi-ooxml-schemas:4.1.2' // Use an available version
	implementation 'org.apache.xmlbeans:xmlbeans:3.1.0'
	implementation 'org.apache.pdfbox:pdfbox:2.0.30'
	implementation 'org.apache.tika:tika-core:2.9.0'
	implementation 'org.apache.tika:tika-parsers:2.9.0'
	implementation files('build/libs/tlsh-4.5.0.jar')
	implementation files('build/libs/tlsh-4.5.0-javadoc.jar')
	implementation files('build/libs/tlsh-4.5.0-sources.jar')
	implementation 'software.amazon.awssdk:s3:2.20.0'

	// spotbugs
	spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'
}

spotbugs {
	toolVersion = '4.8.6'
	ignoreFailures = true
}
tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
	reports {
		xml.required.set(false)
		html.required.set(true)
		html.outputLocation.set(layout.buildDirectory.file("reports/spotbugs/main.html"))
		html.stylesheet = 'fancy-hist.xsl'
	}
	jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}

tasks.named('test') {
	useJUnitPlatform()
}
